<resources>
    <string name="app_name">EP-Farm Application</string>
    <string name="mortality">Mortality</string>
    <string name="reject">Reject</string>
    <string name="mortality_title">Mortality &amp; Reject</string>
    <string name="house_list_title">Select House</string>
    <string name="house_code">House Code</string>
    <string name="sku_code">SKU Code</string>
    <string name="sku">Stock Keeping Unit</string>
    <string name="hse">Hse</string>
    <string name="house_code2">House Code (No. Kadang)</string>
    <string name="discharge2">Discharge (Keluar)</string>
    <string name="discharge_code">Discharge Code</string>
    <string name="receive2">Receive (Masuk)</string>
    <string name="house_code_short">H#</string>
    <string name="gender_short">G#</string>
    <string name="section_short">S#</string>
    <string name="compartment_short">C#</string>
    <string name="num">#</string>
    <string name="cage_with_cover">Cage with Cover</string>
    <string name="cage_with_cover2">Cage with Cover (Jumlah Tutupan)</string>
    <string name="manual_enter_worker">Manual Enter Worker</string>
    <string name="worker_list">Worker List</string>
    <string name="catching">Catching</string>
    <string name="body_weight">Body Weight</string>
    <string name="upload">Upload</string>
    <string name="farm">Farm</string>
    <string name="team1">T1</string>
    <string name="team2">T2</string>
    <string name="team3">T3</string>
    <string name="team4">T4</string>
    <string name="team5">T5</string>
    <string name="local2">Local (Connect Office Wi-Fi)</string>
    <string name="uploaded">Uploaded</string>
    <string name="upload2">Upload (Hantar ke Office)</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth2">Timbangan</string>
    <string name="save2">Save (Simpan)</string>
    <string name="save_and_return">Save &amp; Return</string>
    <string name="settings">Setting</string>
    <string name="record_date">Record for Date</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">Cancel (Balik)</string>
    <string name="delete">Delete</string>
    <string name="reupload">Reupload</string>
    <string name="discard">Discard</string>
    <string name="print">Print</string>
    <string name="print_old">Print Old</string>
    <string name="scan_and_start">Scan and Start</string>
    <string name="scan">Scan</string>
    <string name="qr_code">QR Code</string>
    <string name="weight_day">Weight Day</string>
    <string name="cage_qty">Cage Quantity</string>
    <string name="cage_qty2">Cage Quantity (Jumlah Kurungan)</string>
    <string name="day1">Day 1</string>
    <string name="day7">Day 7</string>
    <string name="day14">Day 14</string>
    <string name="day21">Day 21</string>
    <string name="day28">Day 28</string>
    <string name="cage1">1</string>
    <string name="cage2">2</string>
    <string name="cage3">3</string>
    <string name="cage4">4</string>
    <string name="cage5">5</string>
    <string name="change_date">Change Date</string>
    <string name="change_time">Change Time</string>
    <string name="change_location">Change Location</string>
    <string name="company">Company</string>
    <string name="communicate">Communicate</string>
    <string name="report">Report</string>
    <string name="test">Test</string>
    <string name="function">Function</string>
    <string name="session">Session</string>
    <string name="update">Update</string>
    <string name="update_app_ver">Update App Version</string>
    <string name="location">Location</string>
    <string name="loc">Loc</string>
    <string name="history">History</string>
    <string name="date">Date</string>
    <string name="document">Document</string>
    <string name="submit">Submit</string>
    <string name="lorry_bag">Lorry (bag)</string>
    <string name="silo_mt">Silo (mt)</string>
    <string name="kfc">KFC</string>
    <string name="grade_a">Grade A</string>
    <string name="grade_c">Grade C</string>
    <string name="age">Age</string>
    <string name="truck_code">Truck Code</string>
    <string name="truck_code2">Truck Code (No. Lori)</string>
    <string name="enter_new">Enter New</string>
    <string name="day">Day</string>
    <string name="feed">Feed</string>
    <string name="compartment">Compartment</string>
    <string name="feed_delivery_in">Feed Delivery In</string>
    <string name="feed_in">Feed In</string>
    <string name="feed_out">Feed Out</string>
    <string name="feed_hse_to_hse_transfer">Hse to Hse Transfer</string>
    <string name="feed_transfer">Feed Transfer</string>
    <string name="feed_receive">Feed Receive</string>
    <string name="feed_discharge">Feed Discharge</string>
    <string name="new_body_weight">New Body Weight</string>
    <string name="start">Start</string>
    <string name="start2">Start (Mula)</string>
    <string name="worker2">Worker (Pekerja)</string>
    <string name="continue2">Continue (Terus)</string>
    <string name="section">Section</string>
    <string name="weight_g">Weight (g)</string>
    <string name="quantity">Quantity</string>
    <string name="quantity2">Quantity (Jumlah Ayam)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="wgt">Wgt</string>
    <string name="avg">Avg</string>
    <string name="m_avg">M Avg</string>
    <string name="f_avg">F Avg</string>
    <string name="qty">Qty</string>
    <string name="overall">Overall</string>
    <string name="type">Type</string>
    <string name="type2">Type (Jenis)</string>
    <string name="catch_team">Catch Team (Kumpulan Tangkap)</string>
    <string name="fasting_time2">Fasting Time (Masa Puasa)</string>
    <string name="no_worker2">No Worker (Tiada pekerja)</string>
    <string name="continue_">Continue</string>
    <string name="finish">Finish</string>
    <string name="finish_catch_2">Finish (Selesai Penangkapan)</string>
    <string name="finish_feed_2">Finish (Selesai Letak Feed)</string>
    <string name="exit">Exit</string>
    <string name="variance">Variance</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="worker_name">Worker Name</string>
    <string name="delete_weight">Delete Body Weight</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gross_weight_kg">Gross Weight (KG)</string>
    <string name="tare_weight_kf">Tare Weight (KG)</string>
    <string name="nett_weight_kf">Nett Weight (KG)</string>
    <string name="logo">Logo</string>
    <string name="prototype">Development</string>
    <string name="login_as">Login as</string>
    <string name="confirm">Confirm</string>
    <string name="alert">Alert</string>
    <string name="transfer">Transfer</string>
    <string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string name="farm_data">Farm Data</string>
    <string name="harvest">Harvest</string>
    <string name="other">Other</string>
    <string name="dung">Dung</string>
    <string name="wash">Wash</string>
    <string name="goods_received">Goods Received</string>
    <string name="doc_intake">DOC Intake</string>
    <string name="medication">Medication</string>
    <string name="farm_management">Farm Management</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="nipple_drinker">Nipple Drinker</string>
    <string name="feeding_line">Feeding Line</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="summary_upload">Summary of Upload Data</string>
    <string name="module">Module</string>
    <string name="number_of_record">Number of Record</string>
    <string name="send_log">Send Log</string>
    <string name="send">Send</string>
    <string name="get">Get</string>
    <string name="get2">Get (Dapat)</string>
    <string name="bta_customer">Customer (PL)</string>
    <string name="bta_slaughterhouse">Kilang Potong (IFT/OP)</string>
    <string name="bta_op">OP</string>
    <string name="destination">Destination</string>
    <string name="destination2">Destination (Kepada)</string>
    <string name="doc_number">Document Number</string>
    <string name="hour2">Hour (Jam)</string>
    <string name="minute2">Minute (Minit)</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="doc_number2">Document Number (No. Dokumen)</string>
    <string name="catching_bta">Catching (BTA)</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="wgt_kg">Wgt (KG)</string>
    <string name="weight_kg2">Weight (Timbangan - KG)</string>
    <string name="cage">Cage</string>
    <string name="with_cover_qty">With Cover Qty</string>
    <string name="with_cover">With Cover</string>
    <string name="show_all2">Show All (Tunjuk Semua)</string>
    <string name="search2">Search (Cari)</string>
    <string name="status">Status</string>
    <string name="hint_enter_mortality">Enter amount for mortality</string>
    <string name="hint_enter_reject">Enter amount for reject</string>
    <string name="hint_swipe_to_delete">Swipe to delete</string>
    <string name="hint_swipe_to_delete_and_tap_to_print">Swipe to delete / Tap to print</string>
    <string name="hint_enter_kfc">Enter amount for KFC</string>
    <string name="hint_enter_grade_a">Enter amount for Grade A</string>
    <string name="hint_enter_grade_b">Enter amount for Grade B</string>
    <string name="hint_enter_weight_day">Enter day of bird</string>
    <string name="hint_enter_weight_feed">Enter feed</string>
    <string name="hint_enter_section">Enter section</string>
    <string name="hint_enter_weight">Enter weight</string>
    <string name="hint_enter_quantity">Enter quantity</string>
    <string name="hint_tap_to_open_detail">Tap to open detail</string>
    <string name="hint_tap_to_print">Tap to print</string>
    <string name="house_default_code">House #123</string>
    <string name="default_company_code">Eng Peng Group</string>
    <string name="default_company_name">Eng Peng Group</string>
    <string name="default_location_code">KKIP</string>
    <string name="default_location_name">KKIP</string>
    <string name="default_year">2018</string>
    <string name="default_month_day">Mon, Jan 01</string>
    <string name="default_date">2018 Jan 01</string>
    <string name="default_time">10:00 AM</string>
    <string name="default_m_q">123</string>
    <string name="default_r_q">456</string>
    <string name="default_kfc_q">123</string>
    <string name="default_a_q">456</string>
    <string name="default_b_q">789</string>
    <string name="default_weight">30,000</string>
    <string name="default_quantity">40</string>
    <string name="default_avg">612.24</string>
    <string name="default_section">1</string>
    <string name="default_gender">M</string>
    <string name="default_feed">GH</string>
    <string name="default_day">7</string>
    <string name="default_login_as">You</string>
    <string name="default_version">Ver</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_number_only">This field accept number only</string>
    <string name="error_field_no_zero">This field cannot accept zero</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="msg_logout_alert">Are you sure? Login will require internet connection.</string>
</resources>