<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_business_black_24px"
            android:title="@string/company" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_place_black_24px"
            android:title="@string/location" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_upload"
                    android:icon="@drawable/ic_cloud_upload_black_24px"
                    android:title="@string/upload" />
                <item
                    android:id="@+id/nav_sync"
                    android:icon="@drawable/ic_sync_black_24px"
                    android:title="@string/sync" />
            </group>
        </menu>
    </item>

    <item android:title="@string/report">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_weight_report"
                    android:icon="@drawable/ic_list_black_24px"
                    android:title="@string/weight" />
            </group>
        </menu>
    </item>

    <item android:title="@string/update">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_update_app_ver"
                    android:icon="@drawable/ic_update_black_18dp"
                    android:title="@string/update_app_ver" />
            </group>
        </menu>
    </item>

    <item android:title="@string/session">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit_to_app_black_24px"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/test">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_test"
                    android:icon="@drawable/ic_playlist_add_check_black_24px"
                    android:title="@string/function" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_baseline_settings_20px"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

</menu>
