<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="my.com.engpeng.engpeng.TempCatchBTAHeadActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView style="@style/CardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimaryXLight"
                        android:gravity="center">

                        <TextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/date" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingEnd="30dp"
                            android:paddingStart="30dp">

                            <TextView
                                android:id="@+id/temp_catch_bta_head_tv_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_black"
                                android:paddingTop="8dp"
                                android:textSize="16sp"
                                tools:text="@string/default_year" />

                            <TextView
                                android:id="@+id/temp_catch_bta_head_tv_month_day"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_black"
                                android:paddingBottom="8dp"
                                android:textSize="30sp"
                                tools:text="@string/default_month_day" />
                        </LinearLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/temp_catch_bta_head_btn_change_date"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/change" />

                    </RelativeLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/temp_catch_bta_head_et_doc_number"
                style="@style/EditTextStyle"
                android:hint="@string/doc_number2"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/LabelTextViewStyle"
            android:text="@string/destination2" />

        <RadioGroup
            android:id="@+id/temp_catch_bta_head_rg_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/temp_catch_bta_head_rd_customer"
                style="@style/RadioButtonStyle"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:text="@string/bta_customer" />

            <RadioButton
                android:id="@+id/temp_catch_bta_head_rd_slaughterhouse"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:text="@string/bta_slaughterhouse" />

            <RadioButton
                android:id="@+id/temp_catch_bta_head_rd_op"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:text="@string/bta_op"
                android:visibility="gone" />

        </RadioGroup>

        <TextView
            style="@style/LabelTextViewStyle"
            android:text="@string/type2" />

        <RadioGroup
            android:id="@+id/temp_catch_bta_head_rg_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/temp_catch_bta_head_rd_kfc"
                style="@style/RadioButtonStyle"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:text="@string/kfc" />

            <RadioButton
                android:id="@+id/temp_catch_bta_head_rd_grade_a"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:text="@string/grade_a" />

            <RadioButton
                android:id="@+id/temp_catch_bta_head_rd_grade_b"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:text="@string/grade_c" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout style="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/temp_catch_bta_head_et_truck_code"
                style="@style/EditTextStyle"
                android:hint="@string/truck_code2"
                android:inputType="textCapCharacters|textNoSuggestions" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/LabelTextViewStyle"
            android:text="@string/fasting_time2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp">

            <EditText
                android:id="@+id/temp_catch_bta_head_et_fasting_time_hour"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:maxLength="2"
                android:hint="@string/hour2"
                android:inputType="number" />

            <EditText
                android:id="@+id/temp_catch_bta_head_et_fasting_time_minute"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:maxLength="2"
                android:hint="@string/minute2"
                android:inputType="number" />

            <RadioGroup
                android:id="@+id/temp_catch_bta_head_rg_fasting_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/temp_catch_bta_head_rd_fasting_time_am"
                    style="@style/RadioButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/am" />

                <RadioButton
                    android:id="@+id/temp_catch_bta_head_rd_fasting_time_pm"
                    style="@style/RadioButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/pm" />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/temp_catch_bta_head_btn_scan"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/scan"
                android:drawableStart="@drawable/ic_baseline_settings_overscan_24px"
                android:drawableTint="@color/colorLayoutBackground"
                android:drawablePadding="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="64dp"/>

            <Button
                android:id="@+id/temp_catch_bta_head_btn_start"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/start2"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"/>
        </RelativeLayout>

        <TextView
            style="@style/LabelTextViewStyle"
            android:text="@string/catch_team" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <CheckBox
                android:id="@+id/temp_catch_bta_head_cb_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginEnd="25dp"
                android:text="@string/farm"/>

            <CheckBox
                android:id="@+id/temp_catch_bta_head_cb_t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/team1"/>

            <CheckBox
                android:id="@+id/temp_catch_bta_head_cb_t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/team2"/>

            <CheckBox
                android:id="@+id/temp_catch_bta_head_cb_t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/team3"/>

            <CheckBox
                android:id="@+id/temp_catch_bta_head_cb_t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/team4"/>

            <CheckBox
                android:id="@+id/temp_catch_bta_head_cb_t5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team5"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>