<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/li_temp_weight_summary_ll"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/list_item_selector"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/li_temp_weight_summary_tv_section"
        style="@style/TableRowTextViewStyle"
        tools:text="@string/default_section" />

    <TextView
        android:id="@+id/li_temp_weight_summary_tv_weight"
        style="@style/TableRowTextViewStyle"
        tools:text="@string/default_weight" />

    <TextView
        android:id="@+id/li_temp_weight_summary_tv_quantity"
        style="@style/TableRowTextViewStyle"
        tools:text="@string/default_quantity"/>

    <TextView
        android:id="@+id/li_temp_weight_summary_tv_gender"
        style="@style/TableRowTextViewStyle"
        tools:text="@string/default_gender"/>

</LinearLayout>