<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="my.com.engpeng.engpeng.WeightHistoryActivity">

    <LinearLayout
        android:id="@+id/weight_history_ll"
        style="@style/FixTableHeaderLinearLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/date"
            style="@style/TableHeaderTextViewStyle"/>

        <TextView
            android:text="@string/time"
            style="@style/TableHeaderTextViewStyle"/>

        <TextView
            android:text="@string/feed"
            style="@style/TableHeaderTextViewStyle"/>

        <TextView
            android:text="@string/day"
            style="@style/TableHeaderTextViewStyle"/>

        <TextView
            android:text="@string/uploaded"
            style="@style/TableHeaderTextViewStyle"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/weight_history_rv_list"
        style="@style/RecycleViewStyle"
        app:layout_constraintBottom_toTopOf="@+id/weight_history_tv_swipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_history_ll"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/weight_history_tv_swipe"
        style="@style/SwipeTextViewStyle"
        android:text="@string/hint_tap_to_open_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
