<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FeedTransferHistoryActivity">

    <LinearLayout
        android:id="@+id/feed_transfer_history_ll"
        style="@style/TableHeaderLinearLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/date"
            style="@style/TableHeaderTextViewStyle"
            android:layout_weight="0.4"/>
        <TextView
            android:text="@string/house_code_short"
            style="@style/TableHeaderTextViewStyle"
            android:layout_weight="0.25"/>
        <TextView
            android:text="@string/sku"
            style="@style/TableHeaderTextViewStyle"/>

        <TextView
            android:text="@string/weight"
            style="@style/TableHeaderTextViewStyle"
            android:layout_weight="0.25"/>

        <TextView
            android:text="@string/uploaded"
            style="@style/TableHeaderTextViewStyle"
            android:layout_weight="0.25"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/feed_transfer_history_rv_list"
        style="@style/RecycleViewStyle"
        app:layout_constraintBottom_toTopOf="@+id/feed_transfer_history_tv_swipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_transfer_history_ll"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/feed_transfer_history_tv_swipe"
        style="@style/SwipeTextViewStyle"
        android:text="@string/hint_swipe_to_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>